--- a/index.Rmd
+++ b/index.Rmd
@@ -67,20 +67,22 @@ knit_hooks$set(plot = knitr:::hook_plot_html)
 
 <img src="assets/img/cooperation.jpeg" class="fit100" </img>
 
---- &twocol
-
+--- &twocol .large
 
 *** =left
 
 ## 關於講者
 
-- 臺大電機所博士生
-- 和宇匯知識科技合作
-    - 建立廣告推薦引擎
+臺大電機所博士生
+
+和宇匯知識科技合作建立廣告推薦引擎
+
+### 今天的內容是我和Y.-C. Juan, Y. Zhuang的共同工作
 
 *** =right
 
 <img class="fit100" src="assets/img/wush.jpg"/>
+
 --- &vcenter .large
 
 不是教大家用R 處理GB/TB/PB等級的資料
@@ -296,7 +298,7 @@ object.size(mm)
 ### 使用別人寫好的高效能套件
 ### 使用parallel套件來運用CPU的多核心
 ### 使用Rcpp套件來快速開發C++程式提升效能
-### [利用OpenBLAS來加速矩陣運算](http://www.r-bloggers.com/for-faster-r-use-openblas-instead-better-than-atlas-trivial-to-switch-to-on-ubuntu/)
+### 使用更快的BLAS套件
 
 --- 
 
@@ -322,22 +324,48 @@ benchmark(
 
 --- &vcenter .large
 
-OpenBLAS比較
+R's BLAS v.s. Apple's BLAS (可參考[RMacOSX-FAQ](http://r.research.att.com/man/RMacOSX-FAQ.html#Which-BLAS-is-used-and-how-can-it-be-changed_003f))
+
+```{r, echo=FALSE, results='asis'}
+blas <- read.csv(file="blas.csv", check.names = FALSE, as.is = TRUE)
+blas <- data.frame(lapply(blas, as.character), stringsAsFactors = FALSE)
+for(i in c(4, 5, 8, 9, 10)) {
+  blas$Apple.s.BLAS[i] <- sprintf("<font color='red'>%s</font>", blas$Apple.s.BLAS[i])
+}
+print(xtable(blas), type="html", sanitize.text.function = function(s) {s})
+```
 
 --- &vcenter .large
 
 Parallel & Bootstrap
 
-```{r parallel-bootstrap, cache = TRUE}
+```{r parallel-bootstrap, cache = FALSE, echo=FALSE, eval=FALSE}
+# THe code is run on my desktop
+X <- matrix(rnorm(3000 * 300), 3000, 300)
+w <- rnorm(300, 1, 0.1)
+y <- X %*% w + rexp(300, 1) - 1
+df <- data.frame(X)
+df$y <- y
 library(boot)
 f <- function(df, i) {
   df.sampled <- df[i,]
-  lm(dist ~ speed, df.sampled)$coef[1]
+  lm(y ~ ., df.sampled)$coef[1]
 }
-benchmark(replications=10,
-  boot(cars, f, R=1000, parallel="multicore"),
-  boot(cars, f, R=1000, parallel="no")
+benchmark(replications=4,
+  boot(df, f, R=100, parallel="multicore"),
+  boot(df, f, R=100, parallel="no")
   )
+```
+
+```
+boot(df, f, R = 100, parallel = "multicore", ncpus = 4)
+2                   boot(df, f, R = 100, parallel = "no")
+  replications elapsed relative user.self sys.self user.child
+1           20 311.831    1.000     6.388    0.560    876.979
+2           20 622.117    1.995   620.335    0.112      0.000
+  sys.child
+1      5.26
+2      0.00
 ```
 
 --- &vcenter .large
@@ -351,25 +379,6 @@ benchmark(replications=10,
 ### 儲存成壓縮格式（把硬碟讀取時間變成CPU的時間）
 ### SSD
 ### 分散式讀取
-
---- 
-
-## 分散式讀取
-
-```{r, echo=FALSE, results='asis'}
-readtime <- read.csv("../readtime.csv")
-rownames(readtime) <- readtime[,1]
-readtime <- readtime[,-1]
-colnames(readtime) <- local({
-  tmp <- colnames(readtime)
-  sprintf("%s台機器", substring(tmp, 2, nchar(tmp)))
-})
-rownames(readtime) <- local({
-  tmp <- rownames(readtime)
-  sprintf("%s倍資料", tmp)
-})
-print(xtable(readtime), type="html")
-```
 
 --- &vcenter .large
 
@@ -397,6 +406,20 @@ Single Machine
 }
 ```
 
+--- &twocol
+
+*** =left
+
+## 單台機器讀取
+
+<img src="assets/img/1node.png" class="fit100" />
+
+*** =right
+
+## 多台機器讀取
+
+<img src="assets/img/nnode.png" class="fit100" />
+
 --- &vcenter .large
 
 演算法
@@ -412,15 +435,15 @@ Single Machine
 
 查詢的效能比較
 
-(取自[ptt](http://www.ptt.cc/bbs/R_Language/M.1396729914.A.B34.html))
+### (取自[ptt](http://www.ptt.cc/bbs/R_Language/M.1396729914.A.B34.html))
 
 從iris選取Sepal.Width為3.5的row
 
-### m: `data.frame`
-### m2: `data.table` with indexing
-### m3: `matrix`
+m: `data.frame`
 
-補上平台：windows 7 64 bit SP1, R 3.0.3, i7-3700K@4.3GHz
+m2: `data.table` with indexing
+
+m3: `matrix`
 
 --- &vcenter .large
 
@@ -494,7 +517,7 @@ $$P( y | x ) = \frac{1}{1 + e^{- y w^T x}}$$
 
 --- &vcenter .large
 
-有這些instances
+手上有這些資料
 
 $$(y_1, x_1), (y_2, x_2), ...(y_n, x_n)$$
 
@@ -577,6 +600,8 @@ $$s + C X^T D X s = - \nabla f(w_k)$$
 把[LIBLINEAR](http://www.csie.ntu.edu.tw/~cjlin/liblinear/)和[MPI](http://en.wikipedia.org/wiki/Message_Passing_Interface)參在一起
 
 把[Matrix](http://cran.r-project.org/web/packages/Matrix/index.html)、[Rcpp](http://dirk.eddelbuettel.com/code/rcpp.html)和[pbdMPI](http://en.wikipedia.org/wiki/Programming_with_Big_Data_in_R)參在一起
+
+可參考[pbdMPI](http://programmermagazine.github.io/201310/htm/article6.html)和[HsTrust](https://bitbucket.org/wush978/largescalelogisticregression/src/4daf9c5bba5cd0e4f35afd813866e6da72ca92bb/?at=hstrust)
 
 --- &vcenter .large
 
